--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryptocurrency Landing Page</title>
+    <title>Crypto World</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,20 +21,23 @@
             margin: 0;
             font-size: 2em;
         }
+        nav {
+            background-color: #333;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            color: #00d1b2;
+        }
         section {
             padding: 20px;
             max-width: 800px;
             margin: auto;
-        }
-        section h2 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-        .crypto-info {
-            background-color: #333;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
         }
         footer {
             background-color: #1e1e1e;
@@ -46,23 +49,27 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Crypto World</h1>
+        <h1>Crypto World</h1>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="bitcoin.html">Bitcoin</a>
+        <a href="ethereum.html">Ethereum</a>
+        <a href="litecoin.html">Litecoin</a>
+        <a href="contact.html">Contact</a>
+    </nav>
     <section>
-        <h2>About Cryptocurrency</h2>
-        <p>Cryptocurrency is a digital or virtual currency secured by cryptography, making it nearly impossible to counterfeit or double-spend. The most popular cryptocurrency is Bitcoin.</p>
-        <div class="crypto-info">
-            <h3>Bitcoin (BTC)</h3>
-            <p>The first and most widely recognized cryptocurrency. A pioneer in blockchain technology.</p>
-        </div>
-        <div class="crypto-info">
-            <h3>Ethereum (ETH)</h3>
-            <p>A decentralized platform that runs smart contracts, allowing developers to build decentralized applications (DApps).</p>
-        </div>
-        <div class="crypto-info">
-            <h3>Litecoin (LTC)</h3>
-            <p>A peer-to-peer cryptocurrency created as a "lite" version of Bitcoin, offering faster transaction times.</p>
-        </div>
+        <h2>Welcome to Crypto World</h2>
+        <p>Explore the world of cryptocurrencies and learn about the most popular digital assets. Navigate through our site to find information about Bitcoin, Ethereum, Litecoin, and more.</p>
+
+        <h3>Bitcoin (BTC)</h3>
+        <p>The first and most well-known cryptocurrency, often referred to as digital gold.</p>
+
+        <h3>Ethereum (ETH)</h3>
+        <p>A decentralized platform that supports smart contracts and DApps.</p>
+
+        <h3>Litecoin (LTC)</h3>
+        <p>A peer-to-peer cryptocurrency known for faster transactions compared to Bitcoin.</p>
     </section>
     <footer>
         <p>&copy; 2025 Crypto World. All rights reserved.</p>
