--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
             padding: 10px;
             margin-top: 20px;
         }
+        .exchange-btn {
+            display: inline-block;
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: #00d1b2;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1em;
+        }
+        .exchange-btn:hover {
+            background-color: #00b89e;
+        }
     </style>
 </head>
 <body>
@@ -62,14 +76,11 @@
         <h2>Welcome to Crypto World</h2>
         <p>Explore the world of cryptocurrencies and learn about the most popular digital assets. Navigate through our site to find information about Bitcoin, Ethereum, Litecoin, and more.</p>
 
-        <h3>Bitcoin (BTC)</h3>
-        <p>The first and most well-known cryptocurrency, often referred to as digital gold.</p>
-
-        <h3>Ethereum (ETH)</h3>
-        <p>A decentralized platform that supports smart contracts and DApps.</p>
-
-        <h3>Litecoin (LTC)</h3>
-        <p>A peer-to-peer cryptocurrency known for faster transactions compared to Bitcoin.</p>
+        <h3>Crypto Exchanges</h3>
+        <a class="exchange-btn" href="https://www.binance.com" target="_blank">Binance</a>
+        <a class="exchange-btn" href="https://www.bybit.com" target="_blank">Bybit</a>
+        <a class="exchange-btn" href="https://www.kraken.com" target="_blank">Kraken</a>
+        <a class="exchange-btn" href="https://www.coinbase.com" target="_blank">Coinbase</a>
     </section>
     <footer>
         <p>&copy; 2025 Crypto World. All rights reserved.</p>
