--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto World</title>
+    <title>Мир Криптовалют</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,27 +63,28 @@
 </head>
 <body>
     <header>
-        <h1>Crypto World</h1>
+        <h1>Мир Криптовалют</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="bitcoin.html">Bitcoin</a>
-        <a href="ethereum.html">Ethereum</a>
-        <a href="litecoin.html">Litecoin</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">Главная</a>
+        <a href="bitcoin.html">Биткоин</a>
+        <a href="ethereum.html">Эфириум</a>
+        <a href="litecoin.html">Лайткоин</a>
+        <a href="contact.html">Контакты</a>
     </nav>
     <section>
-        <h2>Welcome to Crypto World</h2>
-        <p>Explore the world of cryptocurrencies and learn about the most popular digital assets. Navigate through our site to find information about Bitcoin, Ethereum, Litecoin, and more.</p>
+        <h2>Добро пожаловать в Мир Криптовалют</h2>
+        <p>Исследуйте мир криптовалют и узнайте больше о самых популярных цифровых активах. На нашем сайте вы найдете информацию о Биткоине, Эфириуме, Лайткоине и других валютах.</p>
 
-        <h3>Crypto Exchanges</h3>
+        <h3>Криптовалютные биржи</h3>
         <a class="exchange-btn" href="https://www.binance.com" target="_blank">Binance</a>
         <a class="exchange-btn" href="https://www.bybit.com" target="_blank">Bybit</a>
         <a class="exchange-btn" href="https://www.kraken.com" target="_blank">Kraken</a>
         <a class="exchange-btn" href="https://www.coinbase.com" target="_blank">Coinbase</a>
+        <a class="exchange-btn" href="https://t.me/your_bot" target="_blank">Перейти в Телеграм-бота</a>
     </section>
     <footer>
-        <p>&copy; 2025 Crypto World. All rights reserved.</p>
+        <p>&copy; 2025 Мир Криптовалют. Все права защищены.</p>
     </footer>
 </body>
 </html>
