--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a class="exchange-btn" href="https://www.bybit.com" target="_blank">Bybit</a>
         <a class="exchange-btn" href="https://www.kraken.com" target="_blank">Kraken</a>
         <a class="exchange-btn" href="https://www.coinbase.com" target="_blank">Coinbase</a>
-        <a class="exchange-btn" href="https://t.me/your_bot" target="_blank">Перейти в Телеграм-бота</a>
+        <a class="exchange-btn" href="https://t.me/CryptoTurkRus_Bott" target="_blank">Перейти в Телеграм-бота</a>
     </section>
     <footer>
         <p>&copy; 2025 Мир Криптовалют. Все права защищены.</p>
